# iot-rugistry

./: Cargo.toml
.devcontainer/: docker-compose.yml
.devcontainer/rabbitmq/: enabled_plugins
src/: main.rs
