[package]
name = "iot-rugistry"
version = "0.1.0"
edition = "2021"
default-run = "iot-rugistry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "iot-rugistry"
path = "src/main.rs"

[dependencies]
axum = "0.6.10"
lapin = "2.1.1"
tokio = { version = "1.26.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
